@@ -3,6 +3,11 @@
 # Verbose mode
 # export DH_VERBOSE=1
 
+include /usr/share/python/python.mk
+PACKAGE_NAME=python-nova
+debroot = debian/tmp
+site_packages_dir=$(debroot)$(call py_libdir,$(shell pyversions -d))
+
 %:
 	dh $@ --with python2
 
@@ -30,8 +35,13 @@ ifeq (,$(findstring nodocs, $(DEB_BUILD_OPTIONS)))
 endif
 
 override_dh_install:
+	python setup.py install -f --install-layout=deb --root=$(debroot)
+	mkdir -p $(debroot)/usr/share
+	mv $(site_packages_dir)/nova/locale $(debroot)/usr/share
+	mkdir -p $(debroot)/usr/share/apport/package-hooks
+
 	dh_install
-	chmod 440 $(CURDIR)/debian/nova-common/etc/sudoers.d/nova_sudoers
+	install -D -m 440 $(CURDIR)/debian/nova_sudoers $(CURDIR)/debian/nova-common/etc/sudoers.d/nova_sudoers
 	#install -D -m 0664 $(CURDIR)/debian/nova-volume.default $(CURDIR)/debian/nova-volume/etc/default/nova-volume
 	install -D -m 0655 $(CURDIR)/etc/nova/logging_sample.conf $(CURDIR)/debian/nova-common/etc/nova/logging.conf
 	for hypervisor in qemu kvm uml lxc; do \
