@@ -7,6 +7,7 @@ nova (2012.2-1) experimental; urgency=low
   * Ordered debian/control build-depends and python-nova depends by alpha
   order.
   * Added new dependency to python-babel.
+  * Now uses setup.py to install python-nova.
 
  -- Mehdi Abaakouk <sileht@sileht.net>  Thu, 27 Sep 2012 10:58:39 +0200
 
